--- a/src/styles/certvault.module.css
+++ b/src/styles/certvault.module.css
@@ -58,7 +58,7 @@
   justify-content: space-between;
 }
 
-.HeroRightBox h5{
+.HeroRightBox p{
   font-size: 1.2vw;
   font-weight: 500;
   color: var(--black);
@@ -114,7 +114,8 @@
 .thirdSectionRightBox {
   width: 70%;
 }
-.h4 {
+
+.paraTop .h4 {
   font-size: 2vw;
   letter-spacing: 1.5px;
   color: var(--black1);
@@ -129,7 +130,7 @@
   display: flex;
   justify-content: flex-start;
 }
-.thirdSectionRightBox .buttonBox h6 {
+.thirdSectionRightBox .buttonBox h3 {
   margin-right: 3vw;
   font-size: 1.2vw;
   font-weight: 500;
@@ -231,7 +232,7 @@
   width: 6vw;
   border-radius: 50%;
 }
-.clientTestimonialSectionFigureText h4{
+.clientTestimonialSectionFigureText p{
   font-size: 1.5vw;
   line-height: 1.5;
   font-weight: 500;
@@ -406,7 +407,7 @@
   margin: 0 auto;
   padding: 4vh 0;
 }
-.videoH2{
+.videoH3{
   font-size: 4vw;
   color: var(--black2);
   text-transform: capitalize;
@@ -498,7 +499,7 @@
     height: auto;
   }
 
-  .HeroRightBox h5{
+  .HeroRightBox p{
     font-size: 2.5vw;
     margin-bottom: 0.8vh;
   }
@@ -526,7 +527,7 @@
     width: 65%;
   }
 
-  .paraTop h4 {
+  .paraTop .h4 {
     font-size: 2.7vw;
     letter-spacing: 0;
     margin-bottom: 4vh;
@@ -536,7 +537,7 @@
       justify-content: flex-start;
   }
 
-  .thirdSectionRightBox .buttonBox h6 {
+  .thirdSectionRightBox .buttonBox h3 {
       font-size: 1.8vw;
       padding: 7px 12px;
       letter-spacing: 0px;
@@ -579,7 +580,7 @@
   .clientTestimonialSectionFigure img{
     width: 14vw;
   }
-  .clientTestimonialSectionFigureText h4{
+  .clientTestimonialSectionFigureText p{
     font-size: 2.5vw;
   }
 
@@ -642,7 +643,7 @@
 .colorOne, .colorTwo, .colorThree, .colorFour{
   height: 120px;
 }
-.videoH2{
+.videoH3{
   font-size: 5vw;
 }
  
@@ -757,7 +758,7 @@
     margin-top: 7vw;
     align-items: flex-start;
   }
-  .HeroRightBox h5{
+  .HeroRightBox p{
     font-size: 3vw;
     margin-bottom: 1.5vh;
   }
@@ -785,14 +786,14 @@
   .h3 {
     font-size: 5.5vw;
   }
-  .paraTop h4 {
+  .paraTop .h4 {
     font-size: 4vw;
   }
   .thirdSectionRightBox {
     width: 100%;
     margin-top: 6vw;
   }
-  .thirdSectionRightBox .buttonBox h6 {
+  .thirdSectionRightBox .buttonBox h3 {
     font-size: 3.2vw;
     padding: 1.2vw 3vw;
     margin-right: 20px;
@@ -846,7 +847,7 @@
   .clientTestimonialSectionFigure img{
     width: 25vw;
   }
-  .clientTestimonialSectionFigureText h4{
+  .clientTestimonialSectionFigureText p{
     font-size: 4vw;
     text-align: center;
   }
@@ -945,7 +946,7 @@
     width: 100%;
   }
 
-  .videoH2 {
+  .videoH3 {
     font-size: 7vw;
     max-width: 80vw;
   }
@@ -1064,18 +1065,18 @@
 }
 
 @media screen and (max-width: 480px) {
-  .HeroLeftBox .Link, .HeroRightBox h5 {
+  .HeroLeftBox .Link, .HeroRightBox p {
     font-size: 4vw;
     margin: 0;
   }
-  .paraTop h4{
+  .paraTop .h4{
     font-size: 5vw;
   }
   .paraTop p, .clientTestimonialparaTop h4{
     font-size: 4.5vw;
     letter-spacing: 1px;
   }
-  .thirdSectionRightBox .buttonBox h6{
+  .thirdSectionRightBox .buttonBox h3{
     margin-right: 10px;
   }
   .HeroLeftBox h1{
@@ -1095,7 +1096,7 @@
   margin: 0 auto;
 }
 
-.certvaultfontHeading h1 {
+.certvaultfontHeading h3 {
   font-size: 4vw;
   color: #1a1a1a;
   text-transform: uppercase;
@@ -1128,7 +1129,7 @@
   margin: 0 auto;
 }
 
-.certvaultcolorHeading h1 {
+.certvaultcolorHeading h3 {
   font-size: 4vw;
   color: #1a1a1a;
   font-weight: 500;
@@ -1149,7 +1150,7 @@
   padding-top: 17vw;
 }
 
-.certvaultcolorBoxHeadingBackground h2 {
+.certvaultcolorBoxHeadingBackground p {
   font-size: 12vw;
   font-family: "Poppins", sans-serif;
   line-height: calc(10px + 220 * ((100vw - 320px) / 1920));
@@ -1262,7 +1263,7 @@
       top: 28%;
     }
   
-    .certvaultcolorBoxHeadingBackground h2 {
+    .certvaultcolorBoxHeadingBackground p {
       margin-top: 15vw;
     }
   
@@ -1277,7 +1278,7 @@
       padding: 10vw 0;
     }
   
-    .certvaultfontHeading h1 {
+    .certvaultfontHeading h3 {
       font-size: 7vw;
     }
     .certvaultcolorMainBox {
@@ -1308,7 +1309,7 @@
     .certvaultcolorBox {
       display: none;
     }
-    .certvaultcolorHeading h1 {
+    .certvaultcolorHeading h3 {
       font-size: 7vw;
     }
   
