--- a/src/styles/patronum.module.css
+++ b/src/styles/patronum.module.css
@@ -58,7 +58,7 @@
   justify-content: space-between;
 }
 
-.HeroRightBox h5{
+.HeroRightBox p{
   font-size: 1.2vw;
   font-weight: 500;
   color: var(--black);
@@ -112,7 +112,7 @@
 .thirdSectionRightBox {
   width: 70%;
 }
-.h4 {
+.paraTop .h4 {
   font-size: 2vw;
   letter-spacing: 1.5px;
   color: var(--black1);
@@ -127,7 +127,7 @@
   display: flex;
   justify-content: flex-start;
 }
-.thirdSectionRightBox .buttonBox h6 {
+.thirdSectionRightBox .buttonBox h3 {
   margin-right: 3vw;
   font-size: 1.2vw;
   font-weight: 500;
@@ -229,7 +229,7 @@
   width: 6vw;
   border-radius: 50%;
 }
-.clientTestimonialSectionFigureText h4{
+.clientTestimonialSectionFigureText p{
   font-size: 1.5vw;
   line-height: 1.5;
   font-weight: 500;
@@ -327,7 +327,7 @@
   margin: 0 auto;
   padding-top: 5vh;
 }
-.colorBoxHeadingBackground h1 {
+.colorBoxHeadingBackground p {
   position: absolute;
   font-size: 17vw;
   top: 80%;
@@ -445,10 +445,6 @@
   .mobileFont {
     display: none;
   }
-  
-  .nextUpContainer {
-    display: none;
-  }
 }
 
 @media screen and (max-width: 1536px) {
@@ -496,7 +492,7 @@
     height: auto;
   }
 
-  .HeroRightBox h5{
+  .HeroRightBox p{
     font-size: 2.5vw;
     margin-bottom: 0.8vh;
   }
@@ -534,7 +530,7 @@
       justify-content: flex-start;
   }
 
-  .thirdSectionRightBox .buttonBox h6 {
+  .thirdSectionRightBox .buttonBox h3 {
       font-size: 1.8vw;
       padding: 7px 12px;
       letter-spacing: 0px;
@@ -577,7 +573,7 @@
   .clientTestimonialSectionFigure img{
     width: 14vw;
   }
-  .clientTestimonialSectionFigureText h4{
+  .clientTestimonialSectionFigureText p{
     font-size: 2.5vw;
   }
 
@@ -628,7 +624,7 @@
   .colorBoxesSection {
     height: 80%;
   }
-  .colorBoxHeadingBackground h1 {
+  .colorBoxHeadingBackground p {
     display: none;
   }
 .colorBoxesSection ul{
@@ -643,83 +639,6 @@
 .videoH2{
   font-size: 5vw;
 }
- 
-  .nextUpContainer {
-    width: 100%;
-    height: 25vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
-    flex-direction: column;
-  }
-
-  .nextUpContent {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .nextTitle {
-    text-align: left;
-  }
-
-  .nextTitle h1 {
-    font-size: 3vw;
-    font-weight: 500;
-    opacity: 0.7;
-    margin-right: 0;
-    margin-bottom: 1vw;
-    color: #1a1a1a;
-  }
-
-  .nextProjectHeading {
-    width: fit-content;
-    text-align: center;
-  }
-
-  .nextProjectHeading h1 {
-    font-size: 7vw;
-    font-weight: 500;
-    color: #1a1a1a;
-    position: relative;
-  }
-
-  .nextProjectHeading h1:before {
-    content: "";
-    display: block;
-    position: absolute !important;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 8.5vw;
-    height: 0.2vw;
-    background: currentColor;
-    -webkit-transition: -webkit-transform 0.45s
-      cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    transition: -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    -o-transition: -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    -moz-transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-  }
-
-  .nextProjectHeading h1:focus:before,
-  .nextProjectHeading h1:hover:before {
-    -webkit-transform: scaleX(0);
-    -moz-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    -o-transform: scaleX(0);
-    transform: scaleX(0);
-  }
-  
 }
 
 @media screen and (max-width: 776px) {
@@ -755,7 +674,7 @@
     margin-top: 7vw;
     align-items: flex-start;
   }
-  .HeroRightBox h5{
+  .HeroRightBox p{
     font-size: 3vw;
     margin-bottom: 1.5vh;
   }
@@ -790,7 +709,7 @@
     width: 100%;
     margin-top: 6vw;
   }
-  .thirdSectionRightBox .buttonBox h6 {
+  .thirdSectionRightBox .buttonBox h3 {
     font-size: 3.2vw;
     padding: 1.2vw 3vw;
     margin-right: 20px;
@@ -844,7 +763,7 @@
   .clientTestimonialSectionFigure img{
     width: 25vw;
   }
-  .clientTestimonialSectionFigureText h4{
+  .clientTestimonialSectionFigureText p{
     font-size: 4vw;
     text-align: center;
   }
@@ -980,89 +899,10 @@
   .desktopSlider {
     display: none;
   }
-
-   .nextUpContainer {
-    width: 100%;
-    height: 30vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
-    flex-direction: column;
-    margin-bottom: 10vh;
-  }
-
-  .nextUpContent {
-    width: 45%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-  }
-
-  .nextTitle {
-    margin-left: 4vw;
-    text-align: left;
-  }
-
-  .nextTitle h1 {
-    font-size: 5vw;
-    font-weight: 500;
-    opacity: 0.7;
-    margin-right: 0;
-    margin-bottom: 1vw;
-    color: #1a1a1a;
-  }
-
-  .nextProjectHeading {
-    width: 100%;
-    text-align: center;
-  }
-
-  .nextProjectHeading h1 {
-    font-size: 10vw;
-    font-weight: 500;
-    color: #1a1a1a;
-    position: relative;
-  }
-
-  .nextProjectHeading h1:before {
-    content: "";
-    display: block;
-    position: absolute !important;
-    left: 3vw;
-    width: 85%;
-    right: 0;
-    bottom: 0;
-    top: 13vw;
-    height: 0.2vw;
-    background: currentColor;
-    -webkit-transition: -webkit-transform 0.45s
-      cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    transition: -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    -o-transition: -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    -moz-transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-    transition: transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -webkit-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -moz-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04),
-      -o-transform 0.45s cubic-bezier(0.4, 0.22, 0.21, 1.04);
-  }
-
-  .nextProjectHeading h1:focus:before,
-  .nextProjectHeading h1:hover:before {
-    -webkit-transform: scaleX(0);
-    -moz-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    -o-transform: scaleX(0);
-    transform: scaleX(0);
-  }
 }
 
 @media screen and (max-width: 480px) {
-  .HeroLeftBox .Link, .HeroRightBox h5 {
+  .HeroLeftBox .Link, .HeroRightBox p {
     font-size: 4vw;
     margin: 0;
   }
@@ -1073,7 +913,7 @@
     font-size: 4.5vw;
     letter-spacing: 1px;
   }
-  .thirdSectionRightBox .buttonBox h6{
+  .thirdSectionRightBox .buttonBox h3{
     margin-right: 10px;
   }
 }
