--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1521,6 +1521,7 @@ label:hover circle {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  margin-bottom: 3vw;
 }
 .homeBlogsHeading{
   font-size: 8vw;
@@ -5711,7 +5712,11 @@ body.loading {
   width: 100%;
 }
 
-.blogs-section button {
+.blog-cati-button{
+  margin-top: 2vw
+}
+
+.blog-cati-button button {
   border-radius: 50px;
   font-size: 1.2vw;
   padding: 0.5vw 2vw;
@@ -5723,6 +5728,11 @@ body.loading {
   font-weight: 500;
   position: relative;
   margin-bottom: 1vw;
+}
+
+.blog-cati-button .active {
+  color: var(--white);
+  background-color: var(--black)!important;
 }
 
 .button--calypso::before,
@@ -5801,13 +5811,11 @@ body.loading {
   transition-timing-function: linear;
 }
 
-
-.active {
+.button--calypso .active {
   color: var(--white);
   background-color: var(--black) !important;
 }
-
-.blogs-section .ul-blog {
+.ul-blog {
   position: relative;
   margin-top: 5vw;
   width: 100%;
@@ -5818,6 +5826,7 @@ body.loading {
   width: 100%;
   height: 60vh;
   overflow: hidden;
+  position: relative;
 }
 
 .img-blog {
@@ -5991,15 +6000,13 @@ body.loading {
   margin-bottom: 10px;
 }
 
-.b__dt-img {
-  height: auto;
-  margin: 50px 0;
-}
-.b__dt-img img{
+.b__dt-content img{
   height: 600px;
   width: 100%;
+  margin: 30px 0 50px;
   object-fit: cover;
 }
+
 .img-caption{
   text-align: center;
   font-size: 18px !important;
@@ -6007,6 +6014,14 @@ body.loading {
   color: var(--gray1);
   padding-top: 15px !important;
 }
+
+.b__dt-content li{
+  font-size: 24px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  color: var(--black2);
+  list-style-type: disc;
+} 
 
 .b__dt-li{
   margin-bottom: 24px;
@@ -6128,6 +6143,7 @@ body.loading {
 .related-article-heading h3{
   font-size: 7vw;
   font-weight: 500;
+  line-height: 1;
 }
 
 .related-article-heading p {
@@ -6162,10 +6178,9 @@ body.loading {
 
 .related-box-img {
   width: 100%;
-  margin-top: 3vw;
-  display: flex;
+  display: grid;
   justify-content: space-between;
-  flex-direction: row;
+  grid-template-columns: 31% 31% 31%;
 }
 
 .img-box-related {
@@ -6183,7 +6198,7 @@ body.loading {
 }
 
 .box-img-content.service__d {
-  width: 31%;
+  width: 100%;
 }
 
 .img-box-related.service__d img{
@@ -8066,7 +8081,7 @@ a:hover {
     margin-bottom: 2rem;
   }
 
-  .blogs-section button {
+  .blog-cati-button button {
     font-size: 2.5vw;
   }
 
@@ -8190,12 +8205,23 @@ a:hover {
     font-size: 3vw;
   } */
 
+  .homeBlog-pading{
+    padding-bottom: 40px
+  }
+  .related-box-img .homeBlog-pading:last-child{
+    display: none;
+  }
+
   .related-articles {
     margin: 0vh auto;
   }
 
   .related-box-img {
-    flex-wrap: wrap;
+    grid-template-columns: 48.5% 48.5%;
+  }
+
+  .related-box-img .ul-blog:last-child{
+    display: none;
   }
 
   .box-img-content {
@@ -8222,8 +8248,17 @@ a:hover {
   height: 40vh;
 }
 .box-img-content.service__d{
-  width: 48%;
+  width: 100%;
+  margin-top: 4vw;
 } 
+
+.related-articles.service__d{
+  margin: 15vh auto 0 !important;
+}
+
+.related-box-img .box-img-content.service__d:last-child{
+  display: none;
+}
 
 
   /* Blog Details END */
@@ -10016,7 +10051,7 @@ a:hover {
     margin-top: 5vw;
   }
 
-  .blogs-section button {
+  .blog-cati-button button {
     font-size: 1.5rem;
     margin-right: 3vw;
     padding: 2vw 5vw;
@@ -10100,13 +10135,12 @@ a:hover {
   }
 
   .related-article-heading p {
-    font-size: 4vw;
+    font-size: 2.8vw;
   }
 
   .related-box-img {
     width: 100%;
-    flex-direction: column;
-    margin-top: 7vw;
+    grid-template-columns: auto;
   }
 
   .img-box-related {
@@ -10220,7 +10254,7 @@ a:hover {
 }
 
 @media screen and (max-width: 480px) {
-  .blogs-section button {
+  .blog-cati-button button {
     font-size: 1rem;
   }
   .Carousel_slide__caro__ckaQX{
@@ -10231,7 +10265,7 @@ a:hover {
     padding: 5px 20px;
   }
   .image-box-blog {
-    height: 50vh;
+    height: 55vh;
   }
 
   /* Service Detail Blogs Section */ 
@@ -10254,6 +10288,7 @@ a:hover {
   }
   .homeBlogs{
     display: block;
+    margin-bottom: 8vw;
   }
   .homeBlogsHeading{
     font-size: 13vw;
@@ -10533,6 +10568,14 @@ a:hover {
 .box-img-content{
   padding: 0;
 }
+.related-article-heading {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+.related-article-heading h3{
+  font-size: 8vw;
+}
 
 /* About Page */
 .container_hero_content .small_heading{
@@ -10737,7 +10780,7 @@ a:hover {
   }
   
   .service-offer-card-wrapper{
-    width: 50%;
+    width: 50% !important;
   }
   .service-offer-card{
     height: 15vh;
@@ -10758,9 +10801,9 @@ a:hover {
     margin-bottom: 5vw;
   }
   .service-offer-card-wrapper{
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
+    width: 100% !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
   }
   .service-offer-card{
     height: 20vh;
@@ -12033,7 +12076,6 @@ label.label:hover:before{
   content: '➜';
 }
 
-
 @media screen and (max-width: 480px){
   .c__testimain .slick-prev, 
   .c__testimain .slick-next{
@@ -12047,7 +12089,6 @@ label.label:hover:before{
   width: 100%;
 }
 }
-
 
 /* JD Page */
 .jd__bgcover{
@@ -12419,4 +12460,183 @@ label.label:hover:before{
 
 .en-link-under:hover span:after {
   transform: scaleX(0);
+}
+
+
+/* Wordpress blogs */
+
+/* Pagination */
+.blog-pagi-container{
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  margin: 5vw 0; 
+}
+
+.pagi-section{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagi-number-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pagi-num{
+  font-size: 22px;
+  width: 55px;
+  font-weight: 500;
+  padding: 6px 0px;
+  margin: 0 12px;
+  border: 1px solid #e3e3e3;  
+  color: var(--black1);
+  border-radius: 3px;
+  transition: all 150ms ease-out;
+}
+
+.pagi-num:hover{
+  background: #e3e3e3;
+}
+
+li.pagi-num.active {
+  background: var(--primary);
+}
+
+a.pagi-num.disabled {
+  cursor: none;
+  background: none;
+}
+
+li.pagi-num.active a{
+  color: var(--white);
+}
+
+.dark .blog-pagi-container img{
+  filter: invert(0) !important;
+}
+
+.dark li.pagi-num.active {
+  background: var(--dark-primary);
+}
+
+
+/* Blog Featured Image full width*/
+.blog-featured-post{
+  height: 100vh;
+  width: 100%;
+  /* background: var(--white2); */
+}
+.blog-feat-post-container{
+  width: 85%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  padding: 5% 0;
+}
+
+.blog-feat-img-contain{
+  width: 40%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+/* .dark .blog-feat-img-contain{
+  box-shadow: 30px 30px 2px var(--white2);
+} */
+
+.blog-feat-img-contain img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.featured-post-content{
+  width: 60%;
+  height: 100%;
+  padding-left: 8%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.feat-post-content-date{
+  margin: 0px 0 20px;
+  font-size: 1.3vw;
+  color: var(--gray2);
+  font-weight: 400;
+}
+.feat-post-title{
+  font-size: 2.5vw;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 40px;
+}
+.feat-post-discription{
+  font-family: 'Ageo';
+  font-size: 1.3vw;
+  letter-spacing: 1px;
+  margin-bottom: 50px;
+}
+.feat-post-link{
+  font-size: 1.4vw;
+}
+
+@media screen and (max-width: 1650px) {
+  .blog-feat-post-container{
+    padding: 8% 0;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .blog-featured-post{
+    height: 100%;
+  }
+  .feat-post-content-date, .feat-post-discription{
+    font-size: 16px;
+  }
+  .feat-post-link{
+    font-size: 18px;
+  }
+  .feat-post-title{
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  .feat-post-discription{
+    margin-bottom: 20px;
+  }
+  .feat-post-link img{
+    width: 20px !important;
+    height: 20px !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .blog-feat-post-container{
+    display: block;
+    padding-top: 15%;
+  }
+  .feat-post-discription{
+    display: none;
+  }
+  .blog-feat-img-contain{
+    width: 100%;
+    height: 60vh;
+  }
+  .featured-post-content{
+    width: 100%;
+    padding: 16px 0;
+  }
+  .blog-pagi-container{
+    margin-top: 10vw;
+  }
 }
