--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,65 +34,6 @@
   --bezier3: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-[data-scrollbar] {
-  position: fixed !important;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  overflow: hidden;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-::selection {
-  color: var(--white);
-  background: var(--primary);
-}
-
-.c-cursor__inner {
-  font-family: "ClashDisplay";
-  font-weight: 400;
-  font-size: 0.9vw !important;
-}
-
-#canvas-webgl{
-  display: none;
-  visibility: hidden !important;
-}
-
-.dark #canvas-webgl{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -99;
-  display: block;
-  filter: invert(1);
-  visibility: visible !important;
-}
-
-.dark .projectNoInvert img{
-  filter: invert(0) !important;
-}
-
-.color-primary{
-  color: var(--primary) !important;
-}
-
-.dark .color-primary{
-  filter: invert(1);
-}
-
-.bgc-primary{
-  background: var(--primary);
-}
-.dark .bgc-primary{
-  background: var(--dark-primary) !important;
-}
-
 /*01. Fonts */
 /*==============FONTS===================*/
 @font-face {
@@ -169,8 +110,66 @@
        font-display: swap;
        font-style: normal;
 }
-
 /*==============FONTS END===================*/
+
+[data-scrollbar] {
+  position: fixed !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+::selection {
+  color: var(--white);
+  background: var(--primary);
+}
+
+.c-cursor__inner {
+  font-family: "ClashDisplay";
+  font-weight: 400;
+  font-size: 0.9vw !important;
+}
+
+#canvas-webgl{
+  display: none;
+  visibility: hidden !important;
+}
+
+.dark #canvas-webgl{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -99;
+  display: block;
+  filter: invert(1);
+  visibility: visible !important;
+}
+
+.dark .projectNoInvert img{
+  filter: invert(0) !important;
+}
+
+.color-primary{
+  color: var(--primary) !important;
+}
+
+.dark .color-primary{
+  filter: invert(1);
+}
+
+.bgc-primary{
+  background: var(--primary);
+}
+.dark .bgc-primary{
+  background: var(--dark-primary) !important;
+}
 
 /*==============Padding And Margins==============*/
 .pb-100 {
@@ -1177,6 +1176,11 @@ button:focus {
 
 #menu {
   display: none;
+}
+
+.menu-svg-icon{
+  width: 100px;
+  height: 100px;
 }
 
 svg {
@@ -6833,6 +6837,7 @@ a:hover {
   }
 
   #header-fixed svg {
+    height: 85px;
     width: 85px;
   }
 }
@@ -7052,6 +7057,7 @@ a:hover {
 
   #header-fixed svg{
     width: 100px;
+    height: 100px;
   }
 
   .showreel .btn-primary {
@@ -8607,6 +8613,7 @@ a:hover {
 
   #header-fixed svg{
     width: 100px;
+    height: 100px;
   }
 
   .header-right-button {
@@ -8632,6 +8639,7 @@ a:hover {
 
   .menu svg {
     width: 80px;
+    height: 80px;
   }
 
   .menu-fixed {
@@ -10329,6 +10337,7 @@ a:hover {
 }
 #header-fixed svg{
   width: 85px;
+  height: 85px;
 }
 
 .menu-links{
