--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12075,7 +12075,7 @@ label.label:hover:before{
   top: 12px;
   border-radius: 5px;
   padding: 2px 10px;
-  font-size: 1vw;
+  font-size: 16px;
   color: white;
 }
 
