--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,249 +89,6 @@ body {
   text-transform: capitalize;
 }
 
-/* Homepage Second Section */
-/* Animations */
-.en-cta .cta-span::after {
-  content: "";
-  background: var(--black);
-  height: 1.5px;
-  width: 100%;
-  transform: scaleX(1);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transition: all 300ms ease-out;
-}
-.en-cta:hover .cta-span:after {
-  transform: scaleX(0);
-}
-.en-cta:hover .cta-emoji {
-  animation-name: wave-animation;
-  animation-duration: 2.5s;
-  animation-iteration-count: infinite;
-  transform-origin: 70% 70%;
-}
-@keyframes wave-animation {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  10% {
-    -webkit-transform: rotate(14deg);
-    transform: rotate(14deg);
-  }
-
-  20% {
-    -webkit-transform: rotate(-8deg);
-    transform: rotate(-8deg);
-  }
-
-  30% {
-    -webkit-transform: rotate(14deg);
-    transform: rotate(14deg);
-  }
-
-  40% {
-    -webkit-transform: rotate(-4deg);
-    transform: rotate(-4deg);
-  }
-
-  50% {
-    -webkit-transform: rotate(10deg);
-    transform: rotate(10deg);
-  }
-
-  60% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-}
-
-.service-offer-card-bg {
-  width: 500px;
-  height: 500px;
-  position: absolute;
-  place-items: center;
-  display: grid;
-  margin: auto;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  animation-name: translate-card-animation;
-  animation-duration: 8s;
-  animation-iteration-count: infinite;
-  scale: 1.5;
-}
-
-/* Mouse Hover Section Break Effect Start */
-/* ========================================== Home Aero ========================================== */
-/* Aerosoles */
-
-.aero-hover {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  z-index: -99;
-}
-
-.aerosol-main {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  position: relative;
-}
-
-.aerosol-main #c-cursor {
-  cursor: none !important;
-}
-
-.text-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: var(--white1);
-  mix-blend-mode: lighten;
-  z-index: 20;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.text-container p {
-  font-weight: 500;
-  font-size: 6vw;
-  text-align: center;
-  color: var(--black);
-  z-index: 1;
-}
-
-.shapes {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  background: var(--black);
-  overflow: hidden;
-}
-
-.shape,
-.shape-10 {
-  will-change: transform;
-  position: absolute;
-  border-radius: 50%;
-}
-
-.shape.shape-1,
-.shape-10.shape-1 {
-  background: #7f7de4;
-  width: 650px;
-  height: 650px;
-  margin: -325px 0 0 -325px;
-}
-
-.shape.shape-2,
-.shape-10.shape-2 {
-  background: #f79694;
-  width: 440px;
-  height: 440px;
-  margin: -220px 0 0 -220px;
-}
-
-.shape.shape-3,
-.shape-10.shape-3 {
-  background: #f5dd94;
-  width: 270px;
-  height: 270px;
-  margin: -135px 0 0 -135px;
-}
-
-/* Aerosoles END */
-
-/* Particles */
-.cb-particles-item {
-  color: var(--black2);
-}
-.-s4 {
-  font-size: 1.5vw;
-  font-weight: 500;
-}
-.-v1 {
-  position: absolute;
-  left: 50%;
-}
-.-v2 {
-  position: absolute;
-  left: 23%;
-}
-.-v3 {
-  position: absolute;
-  left: 25%;
-}
-.-v4 {
-  position: absolute;
-  left: 30%;
-}
-.-v5 {
-  position: absolute;
-  left: 35%;
-}
-.-v6 {
-  position: absolute;
-  left: 45%;
-}
-.-v7 {
-  position: absolute;
-  left: 79%;
-}
-.-v8 {
-  position: absolute;
-  left: 69%;
-}
-.-v9 {
-  position: absolute;
-  left: 89%;
-}
-.-v10 {
-  position: absolute;
-  left: 5%;
-}
-.-v11 {
-  position: absolute;
-  left: 82%;
-}
-.-v12 {
-  position: absolute;
-  left: 18%;
-}
-.-v13 {
-  position: absolute;
-  left: 73%;
-}
-.-v14 {
-  position: absolute;
-  left: 15%;
-}
-.-v15 {
-  position: absolute;
-  left: 10%;
-}
-
-/* Particles END */
-/* Mouse Hover Section Break Effect End */
-
 /* Homepage Services Title */
 .service-title {
   background-image: linear-gradient(
@@ -369,12 +126,6 @@ body {
   -webkit-text-stroke-color: currentColor;
   -webkit-text-fill-color: transparent;
 }
-.content {
-  font-size: 2vw;
-  color: var(--black1);
-  line-height: 1.5;
-  font-weight: 500;
-}
 
 .text-fill .line {
   background: linear-gradient(90deg, var(--black1) 50%, var(--white2) 0);
@@ -403,25 +154,6 @@ body {
 }
 /* Portfolio Page CSS END */
 
-/* Service Detail Page */
-@keyframes translate-card-animation {
-  0% {
-    transform: translate(0) rotate(0deg);
-  }
-  25% {
-    transform: translate(80px, 80px) rotate(90deg);
-  }
-  50% {
-    transform: translate(0) rotate(180deg);
-  }
-  75% {
-    transform: translate(-80px, -80px) rotate(270deg);
-  }
-  100% {
-    transform: translate(0) rotate(1turn);
-  }
-}
-
 /* Careers Page */
 .job-Closed {
   background-color: #ff4747;
@@ -430,7 +162,7 @@ body {
   background-color: #ff7d19;
 }
 .job-New {
-  background-color: #FF8BE6;
+  background-color: #ff8be6;
 }
 .job-Urgent {
   background-color: #218cff;
@@ -451,47 +183,9 @@ body {
   --gray: #5d5d5d;
   --gray1: #737373;
   --gray2: #9a9a9a;
-  --heading: "ClashDisplay";
-  --body: "Ageo";
-}
-
-/* .dark img,
-.dark video,
-.dark iframe {
-  filter: invert(0);
-} */
-
-.dark .text-container {
-  mix-blend-mode: darken;
-}
-
-/* Tablet Responsive CSS Start */
-@media screen and (max-width: 1024px) {
-  .text-container p {
-    font-size: 8vw;
-  }
-  .-s4 {
-    font-size: 3.5vw;
-    font-weight: 500;
-  }
-  .content {
-    font-size: 4vw;
-  }
 }
 /* Tablet Responsive CSS END */
 
-/* Mobile Responsive CSS Start */
-@media screen and (max-width: 540px) {
-  .text-container p {
-    font-size: 10vw;
-  }
-  .content {
-    font-size: 5vw;
-  }
-}
-/* Mobile Responsive CSS END */
-
-
-.kerning-none{
+.kerning-none {
   font-kerning: none;
 }
